syntax = "proto3";
package eagleApi;
option go_package = "github.com/mrNobody95/Gate/services/eagle/api";
import "api/src/misc.proto";
import "api/src/models.proto";

service signalsService {
  rpc NewWorker(AddSignalsWorkerRequest) returns (api.Void);
  rpc CancelWorker(CancelSignalsWorkerRequest) returns (api.Void);
}

message AddSignalsWorkerRequest {
  // @inject_tag: json:"resolution"
  api.Resolution Resolution = 1;
  // @inject_tag: json:"market"
  api.Market Market = 2;
}

message CancelSignalsWorkerRequest {
  // @inject_tag: json:"resolution_id"
  string ResolutionID = 1;
  // @inject_tag: json:"market_id"
  string MarketID = 2;
}